# api-pedidos

./: README.md  pyproject.toml
instance/: api-bank.sqlite
migrations/versions/: 180ed05abd2d_alterando_tipo_da_coluna_chave_pix_em_.py  307718f820bd_adicioando_tabela_pix.py  7023bafa8e21_adicionando_relacionamento_entre_pix_e_.py  7768b964442e_initial_migration.py  87d6043d70c2_fazendo_o_primeiro_commit.py
src/: app.py  config.py  exceptions.py  utils.py
src/controllers/: __init__.py
src/controllers/auth/: auth.py  blueprint.py
src/controllers/cliente/: atualizar_clientes.py  blueprint.py  buscar_cliente.py  criar_cliente.py  deletar_cliente.py  listar_clientes.py
src/controllers/pagamento/: blueprint.py  fazer_pagamento.py  listar_pagamentos.py  listar_pedidos_nao_pagos.py  listar_pedidos_pagos.py
src/controllers/pedido/: atualizar_pedido.py  blueprint.py  delete_pedido.py  fazer_pedido.py  listar_pedidos.py  procurar_pedido.py
src/controllers/pix/: blueprint.py  consultar_pix.py  deletar_pix.py  gerar_pix.py  listar_pix.py
src/controllers/produto/: atualizar_produtos.py  blueprint.py  buscar_produto.py  criar_produto.py  deletar_produto.py  listar_produtos.py
src/controllers/role/: blueprint.py  buscar_role.py  criar_role.py  deletar_role.py  listar_roles.py
src/models/: __init__.py  cliente.py  pagamento.py  pedido.py  pix.py  produto.py  role.py
src/views/: cliente.py  pagamento.py  pedido.py  pix.py  produto.py  role.py
tests/integration/: conftest.py
tests/integration/rotas/: cliente.py
tests/unit/: conftest.py
(+3 files in other folders)
